--- a/packages/algorand-bottombar/package.json
+++ b/packages/algorand-bottombar/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "@obsidians/algorand-compiler": "^0.1.0",
     "@obsidians/algorand-instances": "^0.1.0",
-    "@obsidians/algorand-keypair": "^0.1.0",
     "@obsidians/algorand-project": "^0.1.0",
+    "@obsidians/keypair": "^0.1.0",
     "react-router-cache-route": "^1.8.4"
   },
   "devDependencies": {
