--- a/packages/algorand-instances/package.json
+++ b/packages/algorand-instances/package.json
@@ -17,9 +17,9 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "@obsidians/algorand-keypair": "^0.1.0",
     "@obsidians/algorand-node": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
+    "@obsidians/keypair": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
     "@obsidians/terminal": "^0.1.1",
     "@obsidians/ui-components": "^0.1.0",
