--- a/packages/algorand-project/package.json
+++ b/packages/algorand-project/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {
     "@obsidians/algorand-compiler": "^0.1.0",
-    "@obsidians/algorand-keypair": "^0.1.0",
     "@obsidians/algorand-node": "^0.1.0",
+    "@obsidians/algorand-sdk": "^0.1.0",
     "@obsidians/code-editor": "^0.1.0",
     "@obsidians/file-ops": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
+    "@obsidians/keypair": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
     "@obsidians/ui-components": "^0.1.0",
     "@obsidians/workspace": "^0.1.1",
