--- a/packages/algorand-sdk/package.json
+++ b/packages/algorand-sdk/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {},
   "dependencies": {
+    "@obsidians/keypair": "^0.1.0",
     "algosdk": "^1.6.1",
     "url-parse": "^1.4.7"
   },
