--- a/packages/algorand-project/package.json
+++ b/packages/algorand-project/package.json
@@ -25,6 +25,7 @@
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/keypair": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
+    "@obsidians/redux": "^0.1.0",
     "@obsidians/ui-components": "^0.1.0",
     "@obsidians/workspace": "^0.1.1",
     "lodash": "^4.17.15"
