--- a/packages/algorand-bottombar/package.json
+++ b/packages/algorand-bottombar/package.json
@@ -20,8 +20,7 @@
     "@obsidians/algorand-compiler": "^0.1.0",
     "@obsidians/algorand-instances": "^0.1.0",
     "@obsidians/algorand-project": "^0.1.0",
-    "@obsidians/keypair": "^0.1.0",
-    "react-router-cache-route": "^1.8.4"
+    "@obsidians/keypair": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -43,7 +42,8 @@
   },
   "peerDependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-router-cache-route": "^1.8.4"
   },
   "eslintConfig": {
     "extends": "react-app"
