--- a/packages/algorand-sdk/package.json
+++ b/packages/algorand-sdk/package.json
@@ -11,7 +11,6 @@
   "scripts": {},
   "dependencies": {
     "@obsidians/keypair": "^0.1.0",
-    "algosdk": "^1.6.1",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
@@ -22,5 +21,8 @@
     "@babel/preset-env": "^7.7.5",
     "babel-eslint": "10.0.3",
     "cross-env": "^6.0.3"
+  },
+  "peerDependencies": {
+    "algosdk": "^1.6.1"
   }
 }
