--- a/packages/algorand-explorer/package.json
+++ b/packages/algorand-explorer/package.json
@@ -17,7 +17,9 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@obsidians/algorand-node": "^0.1.0",
     "@obsidians/algorand-sdk": "^0.1.0",
+    "@obsidians/notification": "^0.1.0",
     "@obsidians/ui-components": "^0.1.0"
   },
   "devDependencies": {
