--- a/packages/algorand-header/package.json
+++ b/packages/algorand-header/package.json
@@ -17,6 +17,7 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@obsidians/algorand-node": "^0.1.0",
     "@obsidians/algorand-project": "^0.1.0",
     "@obsidians/navbar": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
