--- a/packages/algorand-instances/package.json
+++ b/packages/algorand-instances/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@obsidians/algorand-node": "^0.1.0",
+    "@obsidians/docker": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/keypair": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
