--- a/packages/algorand-welcome/package.json
+++ b/packages/algorand-welcome/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@obsidians/algorand-compiler": "^0.1.0",
     "@obsidians/algorand-instances": "^0.1.0",
+    "@obsidians/docker": "^0.1.0",
     "@obsidians/file-ops": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/notification": "^0.1.0",
