add monaco in peerDependencies

--- a/packages/algorand-project/package.json
+++ b/packages/algorand-project/package.json
@@ -49,6 +49,8 @@
     "rollup-plugin-postcss": "^2.3.0"
   },
   "peerDependencies": {
+    "monaco-ace-tokenizer": "^0.2.0",
+    "monaco-editor": "^0.20.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
