--- a/packages/algorand-bottombar/package.json
+++ b/packages/algorand-bottombar/package.json
@@ -17,6 +17,7 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@obsidians/algorand-compiler": "^0.1.0",
     "@obsidians/algorand-instances": "^0.1.0",
     "@obsidians/algorand-project": "^0.1.0",
     "@obsidians/docker": "^0.1.0",
