--- a/packages/algorand-explorer/package.json
+++ b/packages/algorand-explorer/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@obsidians/algorand-node": "^0.1.0",
     "@obsidians/algorand-sdk": "^0.1.0",
+    "@obsidians/keypair": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
     "@obsidians/ui-components": "^0.1.0"
   },
