--- a/packages/algorand-welcome/package.json
+++ b/packages/algorand-welcome/package.json
@@ -21,10 +21,8 @@
     "@obsidians/algorand-instances": "^0.1.0",
     "@obsidians/docker": "^0.1.0",
     "@obsidians/file-ops": "^0.1.0",
-    "@obsidians/ipc": "^0.1.1",
     "@obsidians/notification": "^0.1.0",
-    "@obsidians/ui-components": "^0.2.0",
-    "electron-updater": "^4.2.5"
+    "@obsidians/ui-components": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
