--- a/packages/algorand-explorer/package.json
+++ b/packages/algorand-explorer/package.json
@@ -43,7 +43,8 @@
   },
   "peerDependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^5.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
