--- a/packages/algorand-project/package.json
+++ b/packages/algorand-project/package.json
@@ -52,7 +52,8 @@
     "monaco-ace-tokenizer": "^0.2.0",
     "monaco-editor": "^0.20.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^5.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
