--- a/packages/algorand-compiler/package.json
+++ b/packages/algorand-compiler/package.json
@@ -22,8 +22,7 @@
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/notification": "^0.1.0",
     "@obsidians/terminal": "^0.1.1",
-    "@obsidians/ui-components": "^0.2.0",
-    "semver": "^7.3.2"
+    "@obsidians/ui-components": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
