--- a/packages/algorand-project/package.json
+++ b/packages/algorand-project/package.json
@@ -18,9 +18,11 @@
   },
   "dependencies": {
     "@obsidians/algorand-compiler": "^0.1.0",
+    "@obsidians/algorand-instances": "^0.1.0",
     "@obsidians/algorand-node": "^0.1.0",
     "@obsidians/algorand-sdk": "^0.1.0",
     "@obsidians/code-editor": "^0.1.0",
+    "@obsidians/docker": "^0.1.0",
     "@obsidians/file-ops": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/keypair": "^0.1.0",
