--- a/packages/algorand-bottombar/package.json
+++ b/packages/algorand-bottombar/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@obsidians/algorand-project": "^0.1.0",
-    "@obsidians/keypair": "^0.1.0"
+    "@obsidians/keypair": "^0.1.0",
+    "@obsidians/workspace": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
