--- a/packages/algorand-network/package.json
+++ b/packages/algorand-network/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@obsidians/algorand-instances",
+  "name": "@obsidians/algorand-network",
   "version": "0.1.0",
-  "description": "Algorand instance manager",
+  "description": "Algorand network",
   "author": "Phil <qft.gtr@gmail.com>",
   "license": "GPL-3.0",
   "source": "src/index.js",
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@obsidians/algorand-node": "^0.1.0",
+    "@obsidians/algorand-sdk": "^0.1.0",
     "@obsidians/docker": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/keypair": "^0.1.0",
     "@obsidians/notification": "^0.1.0",
+    "@obsidians/redux": "^0.1.0",
     "@obsidians/terminal": "^0.1.1",
     "@obsidians/ui-components": "^0.2.2",
     "moment": "^2.24.0"
@@ -46,8 +48,10 @@
   },
   "peerDependencies": {
     "electron": "^8.0.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-router-cache-route": "^1.8.4"
   },
   "eslintConfig": {
     "extends": "react-app"
