--- a/packages/algorand-node/package.json
+++ b/packages/algorand-node/package.json
@@ -17,6 +17,7 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@obsidians/algorand-network": "^0.1.0",
     "@obsidians/algorand-sdk": "^0.1.0",
     "@obsidians/ipc": "^0.1.1",
     "@obsidians/terminal": "^0.1.1",
