--- a/packages/algorand-sdk/package.json
+++ b/packages/algorand-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@obsidians/algorand-sdk",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "Algorand SDK",
   "author": "Phil <qft.gtr@gmail.com>",
   "license": "GPL-3.0",
@@ -10,7 +10,7 @@
   ],
   "scripts": {},
   "dependencies": {
-    "@obsidians/keypair": "^0.1.0",
+    "@obsidians/keypair": "^0.3.0",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
@@ -19,7 +19,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-function-bind": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
-    "babel-eslint": "10.0.3",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^6.0.3"
   },
   "peerDependencies": {
