--- a/packages/algorand-header/package.json
+++ b/packages/algorand-header/package.json
@@ -17,12 +17,14 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@obsidians/auth": "^0.3.0",
     "@obsidians/algorand-network": "^0.3.0",
     "@obsidians/algorand-project": "^0.3.0",
     "@obsidians/keypair": "^0.3.0",
     "@obsidians/navbar": "^0.3.0",
     "@obsidians/notification": "^0.3.0",
-    "@obsidians/redux": "^0.3.0"
+    "@obsidians/redux": "^0.3.0",
+    "@obsidians/ui-components": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
